New profile pic and a few stylistic changes.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class = "intro-section">
                 <div class = "row">
                     <div class = "profile-pic">
-                        <img src="images/OCTOBER 2021 PIC.jpg">
+                        <img src="images/December 2021 Pic.jpg">
                     </div>
                     <div class = "introduction" id="intro">
                         <h1 style="padding-top: 30px; padding-bottom: 30px;">About the author</h1>
@@ -84,7 +84,7 @@
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="degree"><i>B.S. in Computer Engineering</i></h4>
                             <br>
                             <h3 style="font-weight: 500; margin-left: 5%; margin-right: 5%;" id="org"><u>Organizations</u></h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Student Leadership Academy (2020-Present)</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Student Leadership Academy (2020-2021)</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Frontera Devs (2019-Present)</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Association for Computing Machinery (2019-Present)</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">National Society for Leadership and Success (2020-2021)</li>
