Font style changed, resume added, etc.

--- a/index.html
+++ b/index.html
@@ -60,17 +60,12 @@
                         </p>
                         <br>
                         <p style="font-weight: 500;">
-                            Feel free to contact me for more questions at:
-                            <a href="mailto:rubenplayer105@gmail.com">rubenplayer105@gmail.com</a>
-                        </p>
-                        <br>
-                        <p style="font-weight: 500;">
-                            You can also visit my personal website at:
+                            You can visit my personal website at:
                             <a href="https://rchrisarevalo.github.io/personal-website">rchrisarevalo.github.io/personal-website</a>
                         </p>
                         <br>
                         <p style="font-weight: 500">
-                            You can download my resume by clicking <a href="Resume (Updated October 2021).pdf" download>here.</a>
+                            You can download my resume by clicking <a href="Resume (Updated December 2021).pdf" download>here.</a>
                         </p>
                     </div>
                     <br>
