--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </div>
                     <div id = "report-icon">
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeSu_sZqwO_m42GKlmXKrA30hyTglQQY1N3V2PIcdGc87WbXg/viewform" target="_blank">
-                            <i class="far fa-flag"></i>
+                            <i class="far fa-envelope"></i>
                         </a>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
                     <li><a href="#software">Software Projects</a></li>
                     <li><a href="#courses">Relevant Coursework</a></li>
                 </ul>
-                <button class="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeSu_sZqwO_m42GKlmXKrA30hyTglQQY1N3V2PIcdGc87WbXg/viewform" target="_blank"><i class="far fa-flag"></i>Report</a></button>
+                <button class="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe1nR8hmOAMRTU3fDZsbLRGkjzKvA9uRLZW_YdvsyBEctqDOw/viewform" target="_blank"><i class="far fa-envelope"></i>Contact Me</a></button>
             </nav>
             <div class = "intro-section">
                 <div class = "row">
