--- a/index.html
+++ b/index.html
@@ -50,13 +50,15 @@
                     <div class = "introduction" id="intro">
                         <h1 style="padding-top: 30px; padding-bottom: 30px;">About the author</h1>
                         <p>
-                            Hi everyone! My name is Ruben Arevalo. I am currently a student at the University of Texas-Rio Grande Valley.
-                            I am currently pursuing my bachelor's degree in computer engineering with my concentration focusing on
-                            software. Since I was a high school student, I always found the concept of programming intriguing, thinking
-                            about how much it can change the world in so many different ways. This led to me to develop a huge interest
-                            in learning about software development, since there are so many software programs out there in the Internet,
-                            whether they'd be web applications, server-side applications, etc. Without them, we wouldn't be where we are
-                            today in terms of how much technology has impacted our lives.
+                            Hi everyone! My name is Ruben Christopher Arevalo, and I am a third-year student attending the University of Texas-Rio Grande Valley. 
+                            I am currently pursuing my bachelor's degree in computer engineering with my concentration focusing on software. 
+                            Fun facts I want to share about myself are that I love to code, listen to music (preferrably lofi, classical, and pop), play video games, 
+                            and watch movies and shows in my free time. Since I was a high school student, I always found the concept of programming intriguing, 
+                            thinking about how much over a million (or a few) lines of code can change the world in so many ways. This led to me to develop a huge 
+                            interest in learning about software development, since there are so many software programs out there in the Internet, whether they'd be web 
+                            applications, server-side applications, etc. Regardless of whether an app is either in the web or in our phones, it has changed the way our 
+                            infrastructure works, as well as impacted many of our choices when it comes to utilizing services online. Without them, we wouldn't be where 
+                            we are today in terms of how much technology has impacted our lives and how it changed the world for the better.
                         </p>
                         <br>
                         <p style="font-weight: 500;">
@@ -158,7 +160,7 @@
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Software Engineering II</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Systems Programming</li>
                             <br>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Future Courses (Spring 2022)</u></h3>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Upcoming Courses (Spring 2022)</u></h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Electric Circuits I</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Architecture</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Malware Hacking</li>
