--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <br>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;" id="city">Edinburg, TX</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="univ">University of Texas Rio Grande Valley</h3>
-                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="grad">Expected graduation month/year: May 2023</h3>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="grad">Expected: May 2023</h3>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="degree"><i>B.S. in Computer Engineering</i></h4>
                             <br>
                             <h3 style="font-weight: 500; margin-left: 5%; margin-right: 5%;" id="org"><u>Organizations</u></h3>
@@ -93,7 +93,7 @@
                             <br>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;" id="city">McAllen, TX</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="college">South Texas College</h3>
-                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="grad">Graduation month/year: May 2019</h3>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="grad">Graduation on: May 2019</h3>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="degree"><i>A.S. in Computer Science</i></h4>
                             <br>
                             <h3 style="font-weight: 500; margin-left: 5%; margin-right: 5%;" id="org"><u>Organizations</u></h3>
