--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Software Engineering II</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Systems Programming</li>
                             <br>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Upcoming Courses (Spring 2022)</u></h3>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Current Courses: Spring 2022</u></h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Electric Circuits I</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Architecture</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Malware Hacking</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Malware Detection</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Deep Learning</li>
                         </div>
                     </div>
