--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Electric Circuits I</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Architecture</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Malware Detection</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Deep Learning</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Intro to Deep Learning</li>
                         </div>
                     </div>
                 </div>
