--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class = "intro-section">
                 <div class = "row">
                     <div class = "profile-pic">
-                        <img src="images/December 2021 Pic.jpg">
+                        <img src="images/February 2022 Pic (Min).jpg">
                     </div>
                     <div class = "introduction" id="intro">
                         <h1 style="padding-top: 30px; padding-bottom: 30px;">About the author</h1>
