--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class = "intro-section">
                 <div class = "row">
                     <div class = "profile-pic">
-                        <img src="images/February 2022 Pic (Min).jpg">
+                        <img src="images/March 2022 Profile Pic.jpg">
                     </div>
                     <div class = "introduction" id="intro">
                         <h1 style="padding-top: 30px; padding-bottom: 30px;">About the author</h1>
@@ -165,6 +165,16 @@
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Architecture</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Malware Detection</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Intro to Deep Learning</li>
+                            <br>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Upcoming Courses: Summer 2022</u></h3>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Microcontroller and Embedded Systems</li>
+                            <br>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Upcoming Courses: Fall 2022</u></h3>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Algorithms and Data Structures</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Probability and Statistics for CE/EE Engineers</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Operating Systems</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Senior Design I</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Electronics I</li>
                         </div>
                     </div>
                 </div>
