New profile pic added.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class = "intro-section">
                 <div class = "row">
                     <div class = "profile-pic">
-                        <img src="images/March 2022 Profile Pic.jpg">
+                        <img src="images/April 2022 Profile Pic 2 (Square).JPEG">
                     </div>
                     <div class = "introduction" id="intro">
                         <h1 style="padding-top: 30px; padding-bottom: 30px;">About the author</h1>
