--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <div id = "coursework-content">
                             <h1>Relevant Coursework</h1>
                             <br>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Completed Coursework (as of Fall 2021)</u></h3>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Completed Coursework (as of Spring 2022)</u></h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science I</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science II</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Organization and Assembly Language</li>
@@ -159,8 +159,6 @@
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Networks</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Software Engineering II</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Systems Programming</li>
-                            <br>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Current Courses: Spring 2022</u></h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Electric Circuits I</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Architecture</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Malware Detection</li>
@@ -172,7 +170,6 @@
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Upcoming Courses: Fall 2022</u></h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Algorithms and Data Structures</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Probability and Statistics for CE/EE Engineers</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Operating Systems</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Senior Design I</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Electronics I</li>
                         </div>
