Added countdown to graduation date!

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                         <img src="images/April 2022 Profile Pic 2 (Square).JPEG">
                     </div>
                     <div class = "introduction" id="intro">
+                        <h3 style="padding-top: 15px; padding-bottom: 5px;" id="grad_date">Expected graduation date: <i>May 13, 2022</i></h3>
+                        <h3 style="padding-top: 30px; padding-bottom: 30px;" id="grad_date">Days left until expected graduation: <i id="num_days"></i></h3>
                         <h1 style="padding-top: 30px; padding-bottom: 30px;">About the author</h1>
                         <p>
                             Hi everyone! My name is Ruben Christopher Arevalo, and I am a third-year student attending the University of Texas-Rio Grande Valley. 
@@ -197,6 +199,7 @@
         <script src="https://kit.fontawesome.com/44cd3f986c.js" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="nprogress-master/nprogress.js"></script>
+        <script src="js/currentDate.js" type="text/javascript"></script>
         <script type="text/javascript">
             NProgress.configure({minimum: 0.1, showSpinner: false, easing: 'ease', speed: 600, trickleSpeed: 200});
             NProgress.start();
