--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
                         <p style="font-weight: 500">
                             You can download my resume by clicking <a href="Resume (Updated December 2021) (2).pdf" download>here.</a>
                         </p>
-                        <h3 style="padding-top: 30px; padding-bottom: 30px;" id="grad_date">Expected graduation date: <i>May 13, 2022</i></h3>
+                        <h3 style="padding-top: 30px; padding-bottom: 10px;" id="grad_date">Expected graduation date: <i>May 13, 2022</i></h3>
                         <h3 style="padding-top: 10px; padding-bottom: 10px;" id="grad_date">Days left until expected graduation: <i id="num_days"></i></h3>
+                        <h3 style="padding-top: 5px; padding-bottom: 5px; font-size: 15px;">This section is automatically updated at 6 PM CT each day until graduation approaches.</h3>
                     </div>
                     <br>
                     <div class = "education" id="educate">
