--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel = "stylesheet" href="nprogress-master/nprogress.css">
         <title>Ruben C. Arevalo - CV</title>
     </head>
-    <link rel = "icon" href="images/r-icon-2022.png">
+    <link rel = "icon" href="images/icon-palm.PNG">
     <body>
         <div id = "container">
             <div class = "mobile-header-container">
