New resume download link added.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </p>
                         <br>
                         <p style="font-weight: 500">
-                            You can download my resume by clicking <a href="Resume (Updated December 2021) (2).pdf" download>here.</a>
+                            You can download my resume by clicking <a href="Resume - R_Arevalo.pdf" download>here.</a>
                         </p>
                         <h3 style="padding-top: 30px; padding-bottom: 10px;" id="grad_date">Expected graduation date: <i>May 13, 2022</i></h3>
                         <h3 style="padding-top: 10px; padding-bottom: 10px;" id="grad_date">Days left until expected graduation: <i id="num_days"></i></h3>
