--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
                         </div>
                     </div>
                     <div class = "software-projects" id="software">
+                        <div id = "software-content1">
+                            <h1>Software Projects</h1>
+                            <br>
+                        </div>
                         <div id = "software-content2">
                             <h4 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="programming-languages">Written in: Java</h4>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="project-title">SpaceShip Video Game</h3>
