--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         </p>
                         <h3 style="padding-top: 30px; padding-bottom: 10px;" id="grad_date">Expected graduation date: <i>May 13, 2023</i></h3>
                         <h3 style="padding-top: 10px; padding-bottom: 10px;" id="grad_date">Days left until expected graduation: <i id="num_days"></i></h3>
-                        <h3 style="padding-top: 5px; padding-bottom: 5px; font-size: 15px;">This section is automatically updated between 6 AM to 9 AM CDT each day until graduation approaches.</h3>
+                        <h3 style="padding-top: 5px; padding-bottom: 5px; font-size: 15px;">This section is automatically updated at 6 AM CDT each day until graduation approaches.</h3>
                     </div>
                     <br>
                     <div class = "education" id="educate">
