--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <img src="images/June 2022 Profile Pic (Min).jpg">
                     </div>
                     <div class = "introduction" id="intro">
-                        <h1 style="padding-top: 30px; padding-bottom: 30px;">About the author</h1>
+                        <h1 style="padding-top: 20px; padding-bottom: 20px;">About the author</h1>
                         <p>
                             Hi everyone! My name is Ruben Christopher Arevalo, and I am a third-year student attending the University of Texas-Rio Grande Valley. 
                             I am currently pursuing my bachelor's degree in computer engineering with my concentration focusing on software. 
@@ -72,6 +72,9 @@
                         <h3 style="padding-top: 30px; padding-bottom: 10px;" id="grad_date">Expected graduation date: <i>May 13, 2023</i></h3>
                         <h3 style="padding-top: 10px; padding-bottom: 10px;" id="grad_date">Days left until expected graduation: <i id="num_days"></i></h3>
                         <h3 style="padding-top: 5px; padding-bottom: 5px; font-size: 15px;">This section is automatically updated at 6 AM CDT each day until graduation approaches.</h3>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
                     </div>
                     <br>
                     <div class = "education" id="educate">
@@ -111,6 +114,11 @@
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="position">Customer Service Associate</h3>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="date">June 2019 - July 2019</h4>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="workplace"><i>Sky Park Trampoline Park</i></h4>
+                            <br>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;">McAllen, TX</h3>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="position">Maintenance Crew</h3>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="date">June 2022 - Present</h4>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="workplace"><i>Walgreen's</i></h4>
                         </div>
                     </div>
                     <div class = "software-projects" id="software">
@@ -144,6 +152,7 @@
                     <div class = "coursework" id="courses">
                         <div id = "coursework-content">
                             <h1>Relevant Coursework</h1>
+                            <br>
                             <br>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Completed Coursework (as of Spring 2022)</u></h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science I</li>
@@ -203,5 +212,6 @@
             NProgress.done(true);
         </script>
         <script src="js/load-nav.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
