Changes in 'Experience' and 'Current Courses'

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <br>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;">McAllen, TX</h3>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="position">Maintenance Crew</h3>
-                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="date">June 2022 - Present</h4>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="date">June 2022 - July 2022</h4>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="workplace"><i>Walgreen's</i></h4>
                         </div>
                     </div>
@@ -153,6 +153,9 @@
                         <div id = "coursework-content">
                             <h1>Relevant Coursework</h1>
                             <br>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Courses being currently taken:</u></h3>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Microcontroller and Embedded Systems</li>
+                            <br>
                             <br>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Completed Coursework (as of Spring 2022)</u></h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science I</li>
@@ -170,8 +173,6 @@
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Malware Detection</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Intro to Deep Learning</li>
                             <br>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Upcoming Courses: Summer 2022</u></h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Microcontroller and Embedded Systems</li>
                             <br>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Upcoming Courses: Fall 2022</u></h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Algorithms and Data Structures</li>
