--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                         <br>
                         <p style="font-weight: 500;">
                             You can visit my personal website at:
-                            <a href="https://rchrisarevalo.github.io/personal-website">rchrisarevalo.github.io/personal-website</a>
+                            <a href="https://rchrisarevalo.github.io/personal-website" id="p-link" target="_blank">rchrisarevalo.github.io/personal-website</a>
                         </p>
                         <br>
                         <p style="font-weight: 500">
-                            You can download my resume by clicking <a href="Resume - R_Arevalo (Updated August 2022).pdf" download>here.</a>
+                            You can download my resume by clicking <a id="download-link" href="Resume - R_Arevalo (Updated August 2022).pdf" download>here.</a>
                         </p>
                         <h3 style="padding-top: 30px; padding-bottom: 10px;" id="grad_date">Expected graduation date: <i>May 13, 2023</i></h3>
                         <h3 style="padding-top: 10px; padding-bottom: 10px;" id="grad_date">Days left until expected graduation: <i id="num_days"></i></h3>
