Small fix to a job in the "Experience" section.

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="workplace"><i>Sky Park Trampoline Park</i></h4>
                             <br>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%; float: right;">McAllen, TX</h3>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="position">Maintenance Crew</h3>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;" id="position">Maintenance/Sanitary Crew</h3>
                             <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="date">June 2022 - July 2022</h4>
-                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="workplace"><i>Walgreen's</i></h4>
+                            <h4 style="font-weight: 300; margin-left: 5%; margin-right: 5%;" id="workplace"><i>Walgreens</i></h4>
                         </div>
                     </div>
                     <div class = "software-projects" id="software">
