--- a/index.html
+++ b/index.html
@@ -12,36 +12,23 @@
     <link rel = "icon" href="images/icon-palm.PNG">
     <body>
         <div id = "container">
-            <div class = "mobile-header-container">
-                <div id="mobile-header">
-                    <div class = "hamburger hamburger--squeeze">
-                        <div class = "hamburger-box">
-                          <div class = "hamburger-inner"></div>
-                        </div>
+            <div class = "nav-container">
+                <li>
+                    <div id="logo">
+                        <h3><a href="https://rchrisarevalo.github.io/cv-website" target="_blank">Ruben C. Arevalo</a></h3>
                     </div>
-                    <div id = "mobile-logo">
-                        <a href="index.html"><h3>Ruben C. Arevalo</h3></a>
+                </li>
+                <li id="button-task">
+                    <div id="button">
+                        <a href="https://docs.google.com/forms/d/1zbEbtCvYhJlO2UPg7tOvKK63zkS_c91U9UuMWOg8GRI/edit" target="_blank">Contact Me</a>
                     </div>
-                    <div id = "report-icon">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSe1nR8hmOAMRTU3fDZsbLRGkjzKvA9uRLZW_YdvsyBEctqDOw/viewform" target="_blank">
-                            <i class="far fa-envelope"></i>
-                        </a>
+                </li>
+                <li id="list-mobile-button">
+                    <div id="mobile-button">
+                        <a href="#">Contact Me</a>
                     </div>
-                </div>
+                </li>
             </div>
-            <nav class = "nav-bar">
-                <div id = "logo">
-                    <a href="index.html"><h3>Ruben C. Arevalo</h3></a>
-                </div>
-                <ul class = "nav-list">
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#educate">Education</a></li>
-                    <li><a href="#exp">Experience</a></li>
-                    <li><a href="#software">Software Projects</a></li>
-                    <li><a href="#courses">Relevant Coursework</a></li>
-                </ul>
-                <button class="button"><a href="https://docs.google.com/forms/d/e/1FAIpQLSe1nR8hmOAMRTU3fDZsbLRGkjzKvA9uRLZW_YdvsyBEctqDOw/viewform" target="_blank"><i class="far fa-envelope"></i>Contact Me</a></button>
-            </nav>
             <div class = "intro-section">
                 <div class = "row">
                     <div class = "profile-pic">
@@ -50,8 +37,8 @@
                     <div class = "introduction" id="intro">
                         <h1 style="padding-top: 20px; padding-bottom: 20px;">About the author</h1>
                         <p>
-                            Hi everyone! My name is Ruben Christopher Arevalo, and I am a third-year student attending the University of Texas-Rio Grande Valley. 
-                            I am currently pursuing my bachelor's degree in computer engineering with my concentration focusing on software. 
+                            Hi everyone! My name is Ruben Christopher Arevalo, and I am a fourth-year student attending the University of Texas-Rio Grande Valley. 
+                            I am currently pursuing my Bachelor's degree in computer engineering with my concentration focusing on software. 
                             Fun facts I want to share about myself are that I love to code, listen to music (preferrably lofi, classical, and pop), play video games, 
                             and watch movies and shows in my free time. Since I was a high school student, I always found the concept of programming intriguing, 
                             thinking about how much over a million (or a few) lines of code can change the world in so many ways. This led to me to develop a huge 
@@ -154,10 +141,13 @@
                             <h1>Relevant Coursework</h1>
                             <br>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Courses being currently taken:</u></h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Microcontroller and Embedded Systems</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Algorithms and Data Structures</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Probability and Statistics for CE/EE Engineers</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Senior Design I</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Electronics I</li>
                             <br>
                             <br>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Completed Coursework (as of Spring 2022)</u></h3>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Completed Coursework (as of Summer 2022)</u></h3>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science I</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Science II</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Organization and Assembly Language</li>
@@ -172,13 +162,11 @@
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Computer Architecture</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Malware Detection</li>
                             <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Topics in Computer Science: Intro to Deep Learning</li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Microcontroller and Embedded Systems</li>
                             <br>
                             <br>
-                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Upcoming Courses: Fall 2022</u></h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Algorithms and Data Structures</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Probability and Statistics for CE/EE Engineers</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Senior Design I</li>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;">Electronics I</li>
+                            <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Upcoming Courses: Spring 2023</u></h3>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;"><i>This section will be updated after the Fall 2022 semester has concluded.</i></li>
                         </div>
                     </div>
                 </div>
@@ -196,7 +184,7 @@
                     &copy; <script>document.write(new Date().getFullYear())</script> Ruben Christopher Arevalo
                 </div>
                 <div id = "social-media-links">
-                    <a href="https://www.linkedin.com/in/rchrisarevalo/" target="_blank">Linkedin</a>
+                    <a href="https://www.linkedin.com/in/rchrisarevalo/" target="_blank">LinkedIn</a>
                     <a href="https://github.com/rchrisarevalo" target="_blank">GitHub</a>
                 </div>
             </div>
