Minor change to upcoming courses section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </p>
                         <br>
                         <p style="font-weight: 500">
-                            You can download my resume by clicking <a id="download-link" href="Resume - R_Arevalo (Updated September 2022).pdf" download>here.</a>
+                            You can download my resume by clicking <a id="download-link" href="Resume (Updated December 2022) - R_Arevalo.pdf" download>here.</a>
                         </p>
                         <h3 style="padding-top: 30px; padding-bottom: 10px;" id="grad_date">Expected graduation date: <i>May 13, 2023</i></h3>
                         <h3 style="padding-top: 10px; padding-bottom: 10px;" id="grad_date">Days left until expected graduation: <i id="num_days"></i></h3>
@@ -166,7 +166,7 @@
                             <br>
                             <br>
                             <h3 style="font-weight: 600; margin-left: 5%; margin-right: 5%;"><u>Upcoming Courses: Spring 2023</u></h3>
-                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;"><i>This section will be updated after the Fall 2022 semester has concluded.</i></li>
+                            <li style="margin-left: 5%; margin-right: 5%; font-weight: 300;"><i>This section will be updated after the Fall 2022 semester has officially concluded.</i></li>
                         </div>
                     </div>
                 </div>
